# bunkerweb-plugins

./: .busted  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  COMPATIBILITY.json  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/: codeql.yml  dependabot.yml
.tests/: authentik.sh  build-push.sh  bw.sh  clamav.sh  cloudflare.sh  coraza.sh  crowdsec.sh  notifier.sh  sentinelone.sh  utils.sh  virustotal.sh
authentik/: README.md  authentik.lua  authentik_helpers.lua  plugin.json
clamav/: README.md  clamav.lua  clamav_helpers.lua  docker-compose.yml  plugin.json
cloudflare/: README.md  cloudflare.lua  cloudflare_helpers.lua  plugin.json
coraza/: README.md  coraza.lua  plugin.json
crowdsec/: README.md  acquis.yaml  ban.lua  bitop.lua  bouncer.lua  config.lua  crowdsec.lua  docker-compose.yml  iputils.lua  plugin.json  recaptcha.lua  syslog-ng.conf  template.lua  utils.lua
discord/: README.md  discord.lua  discord_helpers.lua  plugin.json
malware-scan/: .luacheckrc  CACHING.md  GDPR.md  LUA_CHECKS.md  README.md  SECURITY.md  TECHNICAL.md  all-features-enabled.md  cleanup-plugin.sh  install-docker-clamav.md  install-docker-clamav.sh  install.md  install.sh  malware-scan.lua  malware-scan_webhook.lua  malware_scan_api.lua  malware_scan_cache.lua  malware_scan_clamav.lua  malware_scan_config.lua  malware_scan_custom_hashes.lua  malware_scan_database.lua  malware_scan_file.lua  malware_scan_filetypes.lua  malware_scan_init.lua  malware_scan_logger.lua  plugin.json  (+15 more)
(+170 files in other folders)
