[project]
name = "BunkerWeb Plugins"
description = "External plugins for BunkerWeb"
authors = [
    { name = "Bunkerity", email = "contact@bunkerity.com" }
]

[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | env
)/
'''

[tool.refurb]
# FURB124 rewrites `a == "yes" and b == "yes"` into a chained `a == "yes" == b`,
# which reads as "a and b equal each other" and hurts clarity in the CF env-gate logic.
ignore = ["FURB124"]
